made some changes to the html, still look bad tho

--- a/src/myFile.HTML
+++ b/src/myFile.HTML
@@ -6,18 +6,31 @@
 
     <style>
         body {
-          font-family: monospace;
-          background-color: #C6E7FF;
-          font-size: large;
+            font-family: monospace;
+            background-color: #C6E7FF;
+            font-size: large;
+
         }
         h1{
             font-size: xxx-large;
-            align-items: center;
+        }
+        img{
+            width: 15%;
+            height: 50%;
+        }
+        button{
+            width: 50%;
+            position: absolute;
+            font-size: 20px;
+
         }
     </style>
 
-    <h1>UnboringLife</h1>
+    <h1><img src="../inc/avatar.png" alt="avatar">UnboringLife
+        
+    </h1
+    <img src="../inc/avatar.png" alt="avatar">
 
-    <body align="center">WIP</body>
+    <button type="button">&#128512</button>
     
 </HTML:5>
